--- a/examples/pure-javascript.html
+++ b/examples/pure-javascript.html
@@ -5,34 +5,55 @@
 
 <!-- Step 2 --->
 <script>
+
+	// Global Varialbes
 	var sockets=new Array();
-	var cntrlProp=new Array();
+	var subscription_property=new Array();
+	var subscription_location=new Array();
 	var monitor=[];
 	var wssBASE = 'wss-public.executium.com';
 
+	//
 	function socket_connect(id,wss,out)
 	{
 		try
 		{
+			//
 			console.log('ID: '+id+' | Attempting: '+wss);
+			//
 			sockets[id] = io(wss, {'reconnection': true,'reconnectionDelay': 500,'reconnectionDelayMax':500,'reconnectionAttempts': 100});
 
+			//
 			sockets[id].on('connect', function()
 			{
+				//
 				console.log('ID: '+id+' | Connected: '+wss);
+				//
 				socket_output(id,out,'connect');
+				//
+				for(let i in subscription_location[id])
+				{
+					//
+					subscribe_to_orderbook(id,i);
+					console.log('Connecting to '+id+' -> '+i);
+				}
 			});
 
+			//
 			sockets[id].on(id,'disconnect', function()
 			{
+				//
 				console.log('ID: '+id+' Disconnected: '+wss);
+				//
 				socket_output(id,out,'disconnect');
 
 			});
 
 			sockets[id].on('connect_error', function(e)
 			{
-				console.log('ID: '+id+' | Error: '+wss,e);
+				//
+				console.log('ID: '+id+' | Error: '+wss);
+				//
 				socket_output(id,out,'connectionerror');
 
 			});
@@ -45,6 +66,7 @@
 
 	function socket_output(id,oc,rsp)
 	{
+		//
 		switch(oc)
 		{
 			case 'obreq':
@@ -56,32 +78,41 @@
 		}
 	}
 
+	//
 	function request_orderbook_server(exchange,symbol,side)
 	{
+		//
 		var output = side+'-'+exchange+'-'+symbol;
+		//
 		sockets[wssBASE].send({'req':exchange,'s':symbol,'o':output});
 	}
 
+	//
 	function manage_orderbook_data(id,rsp)
 	{
+		//
 		sockets[id].on('mvsym', function(data)
 		{
 			console.log('Symbol Moved Server ->'+data.n,data);
-			unsubscribe_from_orderbook(id,cntrlProp[data.n]);
+			//
+			unsubscribe_from_orderbook(id,subscription_property[data.n]);
+			//
 			var a = data.n.split('-');
 
 			$('.'+data.n+'-price').empty().html('');
 			$('.'+data.n+'-qty').empty().html('');
 			$('.'+data.n+'-ago').empty().html('');
-			$('.'+data.n+'-com').empty().html('');
 
+			//
 			request_orderbook_server(a[1],a[2],data.n);
 
 		});
+		//
 		sockets[id].on('dp', function(data)
 		{
 			try
 			{
+				//
 				var j=JSON.parse(data.d);
 				var n=data.n.replace('/','-');
 				var ago = new Date().getTime()-j[2];
@@ -99,11 +130,13 @@
 					price=price.format('0,0.00000000');
 				}
 
+				//
 				var qty=numeral(j[1]);
 				$('.price-'+n).empty().html( price );
 				$('.qty-'+n).empty().html( qty.format('0,0.00000000') );
 				$('.ago-'+n).empty().html( ago );
 				$('.server-'+n).empty().html( id );
+
 
 				// Only for bids in this example
 				if(side=='bids') {
@@ -119,7 +152,7 @@
 
 						if(rm===true) {
 							setTimeout(function () {
-								$('.row-' + n).removeClass(transition);
+								$('.row-' + n).removeClass(transition).removeClass('transition-bad');
 							}, 110);
 						}
 					}
@@ -135,21 +168,28 @@
 
 	}
 
+
 	function manage_orderbook_request(id,rsp)
 	{
+		//
 		sockets[id].on('obreq', function(data)
 		{
+			//
 			var delay=0;
+			//
 			if(typeof sockets[data.n] === 'undefined')
 			{
 				if(data.n=='notavailable')
 				{
-					console.warn('Issue',data); $('.'+data.o+'-price').empty().html( 'Not available or running - '+data.s);
+					console.warn('Issue',data);
+					$('.'+data.o+'-price').empty().html( 'Not available or running - '+data.s);
 					delay=-1;
 				}
 				else
 				{
+					//
 					socket_connect(data.n,'https:\/\/'+data.n+':2083','ob');
+					//
 					delay=1000;
 
 				}
@@ -160,44 +200,62 @@
 				// timeout measure temp
 				setTimeout(function()
 				{
+					//
 					var s=data.o.split('-');
+					//
 					if(s[0]=='bids' || s[0]=='asks')
 					{
+						//
 						controllerOb(data.n,data.o,s[0],data.s,1,data.o);
 					}
 
 				},delay);
 			}
-
 		});
 	}
 
+	//
 	function controllerOb(id,cid,side,sym,lvl,a)
 	{
+		//
 		var subtag=side+'/'+sym+'-'+lvl;
-		if(typeof cntrlProp[cid] !== 'undefined')
+		//
+		if(typeof subscription_property[cid] !== 'undefined')
 		{
 			// Unsubscribe
-			unsubscribe_from_orderbook(id,cntrlProp[cid]);
+			unsubscribe_from_orderbook(id,subscription_property[cid]);
 		}
 
 		$('.'+a+'-price').empty().html('<span class="price-'+subtag.replace("/","-")+'"></span>');
 		$('.'+a+'-qty').empty().html('<span class="qty-'+subtag.replace("/","-")+'"></span>');
 		$('.'+a+'-ago').empty().html('<span class="ago-'+subtag.replace("/","-")+' ago"></span>');
+		$('.'+a+'-com').empty().html('<span class="com-'+subtag.replace("/","-")+'"></span>');
 
-		cntrlProp[cid]=subtag;
+		//
+		if(typeof subscription_location[id] === 'undefined') { subscription_location[id]=new Array(); }
+		//
+		subscription_property[cid]=subtag;
+		subscription_location[id][subtag]=sym;
+
+		//
 		subscribe_to_orderbook(id,subtag);
 	}
 
 	function unsubscribe_from_orderbook(id,a)
 	{
+
+		delete subscription_property[a];
+		delete subscription_location[id][a];
 		sockets[id].send({'unsubscribe':a});
 	}
 
 	function subscribe_to_orderbook(id,tag)
 	{
+		//
 		sockets[id].send({'subscribe':tag});
 	}
+
+
 </script>
 
 <!-- Adding seperate script section for illustration purposes. --->
@@ -214,3 +272,24 @@
 <div class="bids-binance-btcusdt-price">&hellip;</div>
 <div class="bids-binance-btcusdt-qty">&hellip;</div>
 <div class="bids-binance-btcusdt-ago ago">&hellip;</div>
+
+<!-- Optional Step -->
+<script>
+
+
+	setInterval(function()
+	{
+		$.each($('.ago'),function()
+		{
+			var v=parseInt($(this).html());
+			if(v>0)
+			{
+				$(this).empty().html(parseInt(v+25));
+			}
+
+		});
+
+	},25);
+
+
+</script>
